# ensembl-cli

./: .SRCINFO  .gitignore  PKGBUILD  README.md  ensembl-cli-0.1.3.r25.gde9eb94-1-any.pkg.tar.zst  pyproject.toml
.github/workflows/: ci.yml  release-drift.yml  release.yml
scripts/: build-release-archive.sh  prefetch_docs.sh  update_metadata.py  verify_python_dist.sh
src/ensembl_cli/: cli.py  client.py  metadata.py
src/ensembl_cli/data/: operations.json
tests/: test_cli.py  test_metadata.py
